# EconomicPlanningCourse

./: .gitattributes  .gitignore  BOOTSTRAP_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  PRD_addendum1.md  PRD_addendum2.md  README.md  _quarto.yml  index.qmd  index.quarto_ipynb_1  master-resources.qmd  morishima_syllabus.md  pyproject.toml  where-this-lands.qmd
.github/workflows/: lint.yml  render.yml
.meta/: REPO_GUIDE.md
.meta/old_setup/: ADDENDUM1_REPORT.md  ADDENDUM2_REPORT.md  PRD_addendum1.md  PRD_addendum2.md
201/: placeholder.qmd
appendices/: appendix-a-prereq.qmd  appendix-c-absorption.qmd
apps/: README.md
apps/_template/: README.md
apps/demo-budget-explorer/: README.md  app.py
assets/css/: custom-dark.scss  custom.scss
assets/scripts/: make-cover.py  strip-author-notes.py
assets/widgets/jsxgraph/: 01-function-plot-with-slider.html  04-mathjax-labels.html
assets/widgets/observable/: 01-reactive-slider.qmd
controversies/: controversy-01-cobb-douglas.qmd  controversy-02-calculation.qmd  controversy-03-transformation.qmd  controversy-04-sraffa.qmd  controversy-05-okishio.qmd  controversy-06-money.qmd  controversy-07-climate.qmd  seminar-chinese-critique.qmd
courses/201/: _quarto.yml  index.qmd  make-cover.py  pyproject.toml
courses/201/_book/: index.html  search.json
courses/201/notes/: README.md  index.md
courses/201/notes/_meta/: glossary.md  workflow.md
courses/the_calculation_course/: _quarto-print.yml  _quarto.yml  _variables.yml  calculation_syllabus.md  index.qmd  post-course.qmd  pyproject.toml  research-tracks.qmd  where-this-lands.qmd  workflow.md
courses/the_calculation_course/201/: placeholder.qmd
courses/the_calculation_course/_book/: index.html  master-resources.html  post-course.html  search.json  where-this-lands.html
courses/the_calculation_course/appendices/: appendix-b-extra-depth.qmd  appendix-d-calculation-in-kind.qmd
courses/the_calculation_course/apps/: README.md
courses/the_calculation_course/controversies/: controversy-01-cobb-douglas.html  controversy-01-cobb-douglas.qmd  controversy-06-money.qmd  (+10 more)
courses/the_crypto_course/: _quarto.yml  index.qmd  make-cover.py  pyproject.toml
data/: README.md
data/sfc-models-net/: README.md
minsky-models/: README.md
notes/: README.md  index.md
notes/201-planning/: index.md
notes/_book-aliases/: controversy-01.md  controversy-02.md  controversy-03.md  controversy-04.md  controversy-05.md  controversy-06.md  controversy-07.md  seminar-chinese-critique.md  week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md
notes/_meta/: decisions.md  deferred.md  workflow.md
quartz/: .gitignore  README.md  notes-overrides.tsx  package.json  quartz.config.ts  quartz.layout.ts  setup.sh
quartz/content/: 201  index.md  marxian_formalization  postcapitalism_after_ai  the_calculation_course  the_crypto_course
ravel-files/: README.md
research/marxian_formalization/: _quarto.yml  index.qmd  make-cover.py  pyproject.toml
research/postcapitalism_after_ai/: _quarto.yml  bibliography.qmd  index.qmd  make-cover.py  pyproject.toml  sources.qmd
research/postcapitalism_after_ai/notes/: README.md  index.md
research/postcapitalism_after_ai/notes/_meta/: glossary.md  progress.md  workflow.md
research/postcapitalism_after_ai/threads/: thread-01-calculation-debate-after-1991.qmd  thread-02-multi-criterial-planning.qmd  thread-03-optimization-economics-computing.qmd  thread-04-ai-labor-markets.qmd  thread-05-philosophical-apparatus.qmd  thread-06-crypto-coordination.qmd
sfc-notebooks/: 02-pc-portfolio-choice.ipynb  README.md
shared/: _quarto-base.yml
shared/assets/: font-picker.html  jsxgraph-include.html  notes-links.html
site-root/: index.html
tests/: test_strip_author_notes.py
weeks/: week-01-multivariable.qmd  week-02-constrained.qmd  week-03-linear-algebra.qmd  week-04-eigenvalues.qmd  week-05-economic-opt.qmd  week-06-lp-duality.qmd  week-07-input-output.qmd  week-08-planning.qmd  week-09-diff-eq.qmd  week-10-growth-stability.qmd
(+219 files in other folders)
