[project]
name = "postcapitalism-after-ai"
version = "0.1.0"
description = "Postcapitalist coordination and planning after AI: research track combining the AI / postcapitalism debate, optimization-as-ideology, AI labor-market econometrics, and on-chain coordination"
readme = "../../README.md"
license = { text = "CC-BY-SA-4.0" }
authors = [
    { name = "MetaCoding Solutions" },
]
requires-python = ">=3.11,<3.13"

dependencies = [
    # Scientific Python core
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "pandas>=2.2",
    "networkx>=3.2",
    "statsmodels>=0.14",
    "jupyter>=1.0",
    "jupyterlab>=4.1",
    # Cryptographic primitives (hash functions, elliptic curves, key generation)
    "cryptography>=42.0",
    "pycryptodome>=3.20",
    # On-chain data analysis
    "web3>=6.0",
    # Bitcoin / blockchain data access
    "requests>=2.31",
    "httpx>=0.27",
    # Data manipulation for on-chain analytics
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
